--- a/views/articles/list.ejs
+++ b/views/articles/list.ejs
@@ -1,7 +1,10 @@
 <% include ../layouts/header %>
 <h1 class='my-4'>
   Articles
-  <a href='/articles/create' class='btn btn-outline-primary float-right'>Create new article</a>
+  <% if(currentUser) { %>
+    <a href='/articles/create' class='btn btn-outline-primary float-right'>
+    Create new article</a>
+  <% } %>
 </h1>
 <ul class="list-group">
   <% articles.forEach((article) => { %>
