--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -18,7 +18,28 @@
           <ul class="navbar-nav mr-auto">
             <li class="nav-item"><a href="/" class='nav-link'>Home</a></li>
             <li class="nav-item"><a href="/articles" class='nav-link'>Articles</a></li>
+            <li class="nav-item"><a href="/users" class='nav-link'>Users</a></li>
+            <!-- <li class="nav-item"><a href="/auth/signup" class='nav-link'>Signup</a></li>
+            <li class="nav-item"><a href="/auth/login" class='nav-link'>Log in</a></li> -->
             <li class="nav-item"><a href="/about" class='nav-link'>About</a></li>
+          </ul>
+          <ul class="navbar-nav ml-auto">
+            <% if(!currentUser){ %>
+              <li class="nav-item"><a class="nav-link" href="/auth/signup">Sign Up</a></li>
+              <li class="nav-item"><a class="nav-link" href="/auth/login">Log In</a></li>   
+            <% } else { %>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <%= Boolean(currentUser.username) && currentUser.username %> Account
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="/users/<%= currentUser.id %>">Profile</a>
+                  <a class="dropdown-item" href="/users/<%= currentUser.id %>/update">Settings</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="/auth/logout">Log Out</a>
+                </div>
+              </li>             
+            <% } %>
           </ul>
         </div>
       </div>
